--- a/changes.txt
+++ b/changes.txt
@@ -8,15 +8,10 @@
   
 ** test infra
 
-** dev infra
-- restore working semgrep.yml
-
 * 0.3 (Q4 2025) ( ?arm native? )
 
 ** language
 - backport Shorthand notation for records { lbl; } in expr and pats (3.12.0)
-
-** stdlib
 
 ** tools
 - ocamllex: backport support for lexer rules with parameters (3.07)
@@ -24,16 +19,20 @@
 ** stdlib
 - backport Format.formatter_of_buffer (2.01)
 
+** dev infra
+- restore working semgrep.yml
+
+
 * 0.2 (Q3 2025) (efuns and xix build with ocaml-light, arm progress)
+
+** language
+- partial support for [@@] after module binding
 
 ** stdlib
 - backport String.{starts_with,ends_with} (but without labels) (4.13.0)
   and capitalize_ascii (4.03)
 - backport Thread.Exit exn (4.14.0)
 - more backport of bytes vs strings functions (e.g., Pervasives.output_substring)
-
-** language
-- partial support for [@@] after module binding
 
 ** misc
 - add some --std=89 to be able to compile with recent gcc
@@ -43,6 +42,12 @@
 * 0.1 (Q2 2025) (Dockerfile/Nix/GHA CI checks, native working, dune, tests infra, Xix)
 # ported enough features so I can compile some of xix via build-mk.sh and mk
 # in bytecode and (static) native modes!
+
+** language
+- partial support for attributes ([@@...]), object types (<Cap.exec; ..>),
+  objet cast (foo :> Cap.exec), object defs (object ... end),
+  and labels (~finally:) but just enough so
+  that we can parse the code in xix (but we discard the constructs)
 
 ** stdlib
 - backport Obj.is_int and Obj.xxx_tag (2.02)
@@ -59,12 +64,6 @@
   (it is used by a few examples/)
 - backport of Arg.align and Arg.parse_argv
   
-** language
-- partial support for attributes ([@@...]), object types (<Cap.exec; ..>),
-  objet cast (foo :> Cap.exec), object defs (object ... end),
-  and labels (~finally:) but just enough so
-  that we can parse the code in xix (but we discard the constructs)
-
 ** typechecker
 - backport ability to type string-format in higher order functions like
   Logs.info (fun m -> m "%s" name) (extension to type_expect())
@@ -145,7 +144,7 @@
 ** OCaml
 # originally in Changes
 
-  Objective Caml 1.07:
+*** Objective Caml 1.07:
   --------------------
   
   * Native-code compiler:
@@ -170,7 +169,7 @@
   
   * MS Windows port: better handling of long command lines in Sys.command
   
-  Objective Caml 1.06:
+*** Objective Caml 1.06:
   --------------------
   
   * Language:
@@ -268,7 +267,7 @@
   
   * Emacs editing mode and debugger interface updated to July '97 version.
   
-  Objective Caml 1.05:
+*** Objective Caml 1.05:
   --------------------
   
   * Typing: fixed several bugs causing spurious type errors.
@@ -287,7 +286,7 @@
   
   * Macintosh port: fixed signed division problem in bytecomp/emitcode.ml
   
-  Objective Caml 1.04:
+*** Objective Caml 1.04:
   --------------------
   
   * Replay debugger ported from Caml Light; added debugger support in
@@ -350,7 +349,7 @@
   * Emacs editing mode and debugger interface included in distribution.
   
   
-  Objective Caml 1.03:
+*** Objective Caml 1.03:
   --------------------
   
   * Typing:
@@ -399,7 +398,7 @@
   * Perl-free, cpp-free, cholesterol-free installation procedure.
   
   
-  Objective Caml 1.02:
+*** Objective Caml 1.02:
   --------------------
   * Typing: 
     - fixed bug with type names escaping their scope via unification
@@ -456,7 +455,7 @@
     and call caml_main() later.
   
   
-  Objective Caml 1.01:
+*** Objective Caml 1.01:
   --------------------
   * Typing: better report of type incompatibilities; 
     non-generalizable type variables in a struct...end no longer flagged
@@ -508,7 +507,7 @@
       some error messages have been made clearer;
       several bugs fixes.
   
-  Objective Caml 1.00:
+*** Objective Caml 1.00:
   --------------------
   
   * Merge of Jerome Vouillon and Didier Remy's object-oriented
@@ -548,7 +547,7 @@
 ** Caml Special Light
 # originally in Changes
 
-  Caml Special Light 1.15:
+*** Caml Special Light 1.15:
   ------------------------
   
   * Caml Special Light now runs under Windows NT and 95. Many thanks to
@@ -579,7 +578,7 @@
   * Unix library: bug in gethostbyaddr fixed; bounds checking for read,
   write, etc.
   
-  Caml Special Light 1.14:
+*** Caml Special Light 1.14:
   ------------------------
   
   * cslopt ported to the PowerPC/RS6000 architecture. Better support for
@@ -593,7 +592,7 @@
   
   * Several bug fixes in callbacks and signals.
   
-  Caml Special Light 1.13:
+*** Caml Special Light 1.13:
   ------------------------
   
   * Pattern-matching compilation revised to factor out accesses inside
@@ -617,12 +616,12 @@
   * cslopt for the Sparc: don't use Sparc V8 smul and sdiv instructions,
   emulation on V7 processors is abysmal.
   
-  Caml Special Light 1.12:
+*** Caml Special Light 1.12:
   ------------------------
   
   * Fixed an embarrassing bug with references to floats.
   
-  Caml Special Light 1.11:
+*** Caml Special Light 1.11:
   ------------------------
   
   * Streams and stream parsers a la Caml Light are back (thanks to
@@ -645,7 +644,7 @@
   
   * Lower memory consumption for the native-code compiler.
   
-  Caml Special Light 1.10:
+*** Caml Special Light 1.10:
   ------------------------
   
   * Many bug fixes (too many to list here).
@@ -663,7 +662,7 @@
   Malecki and Victor Manuel Gulias Fernandez); better docs for the Unix
   and regexp libraries.
   
-  Caml Special Light 1.07:
+*** Caml Special Light 1.07:
   ------------------------
   
   * Syntax: optional ;; allowed in compilation units and structures
@@ -680,7 +679,7 @@
   
   * Standard library: added List.memq; documentation of Array fixed.
   
-  Caml Special Light 1.06:
+*** Caml Special Light 1.06:
   ------------------------
   
   * First public release.
@@ -688,10 +687,10 @@
 ** Caml light
 # originally in Changes
 
-  Caml Light 0.75:
+*** Caml Light 0.75:
   ----------------
   
-  Caml Light 0.74:
+*** Caml Light 0.74:
   ---------------
   
   * Typing: when typing a sequence (e1;e2), warn if e1 does not have
@@ -724,7 +723,7 @@
   
   * camllex: fixed bug causing undetected type errors in lexer definitions.
   
-  Caml Light 0.73:
+*** Caml Light 0.73:
   ---------------
   
   * Standard library:
@@ -735,7 +734,7 @@
   * MS Windows port: fixed several bugs in the interactive application
     that showed up only under Win 3.1.
   
-  Caml Light 0.72:
+*** Caml Light 0.72:
   ---------------
   
   * Parsing: fixed precedence of alphanumeric user-defined infixes,
@@ -786,7 +785,7 @@
     POSIX compliant.
   
   
-  Caml Light 0.71:
+*** Caml Light 0.71:
   ---------------
   
   * Port to MS Windows (3.1, 95, NT).
@@ -812,7 +811,7 @@
   
   * French version for the Macintosh (thanks to Jerome Kasparian).
   
-  Caml Light 0.7:
+*** Caml Light 0.7:
   --------------
   
   * Source-level debugger with replay capabilities. Compiler support for
@@ -925,7 +924,7 @@
     (or better yet, `x + !y').
   
   
-  Caml Light 0.61:
+*** Caml Light 0.61:
   ----------------
   
   * Pattern-matching against (C x) where C has several arguments now works
@@ -948,7 +947,7 @@
   
   * Typos in library interfaces fixed.
   
-  Caml Light 0.6:
+*** Caml Light 0.6:
   ---------------
   
   * Better handling of type abbreviations. Implementing an abstract type
@@ -997,7 +996,7 @@
   
   * libunix: tty interface (POSIX termios), popen-style functions.
   
-  Caml Light 0.5:
+*** Caml Light 0.5:
   ---------------
   
   Language extensions:
@@ -1078,7 +1077,7 @@
   subsumed by the "hashtbl" module.
   
   
-  Caml Light 0.41:
+*** Caml Light 0.41:
   ----------------
   
   * Alternate spelling for floating-point operators: +. -. *. etc.
@@ -1088,7 +1087,7 @@
   * io__seek*, io__pos* more efficient.
   
   
-  Caml Light 0.4:
+*** Caml Light 0.4:
   ---------------
   
   * A lexer generator (in the style of lex) and a parser generator (in
@@ -1103,7 +1102,7 @@
   
   * A simpler installation procedure.
   
-  Caml Light 0.3:
+*** Caml Light 0.3:
   ---------------
   
   * First public release.
