--- a/changes.txt
+++ b/changes.txt
@@ -4,20 +4,21 @@
 
 ** compilers
 - finish native arm port
-- port more arch x86_64(amd64)/arm64/riscv/mips
+- port more arch x86_64(amd64)/arm64(aarch64)/riscv(and riscv64)/mips
   
 ** test infra
 
 * 0.3 (Q4 2025) ( ?arm native? )
 
 ** language
-- backport Shorthand notation for records { lbl; } in expr and pats (3.12.0)
+- backport shorthand notation for records { lbl; } in expr and pats (3.12.0)
 
 ** tools
 - ocamllex: backport support for lexer rules with parameters (3.07)
 
 ** stdlib
 - backport Format.formatter_of_buffer (2.01)
+- backport Int32.ml and Int64.ml (3.00)
 
 ** dev infra
 - restore working semgrep.yml
