--- a/changes.txt
+++ b/changes.txt
@@ -9,11 +9,10 @@
 - backport Int32.ml and Int64.ml (depends on custom block) (3.00)
 
 ** compilers
-- finish native arm port
+- finish native arm port (from 2.01?)
 - port more arch x86_64(amd64)/arm64(aarch64)/riscv(and riscv64)/mips
   
 ** test infra
-
 
 
 * 0.3 (Q4 2025) ( ?arm native? )
@@ -26,6 +25,7 @@
 
 ** typechecker
 - partial backport of type-directed field access disambiguation (4.01.0)
+  improving significantly the use of records
 
 ** tools
 - ocamllex: backport support for lexer rules with parameters (3.07)
