--- a/changes.txt
+++ b/changes.txt
@@ -1,21 +1,6 @@
 # -*- org -*-
 
-* TODO
-
-** runtime
-- backport "custom" block, useful for Bignum and Int32/Int64 (3.00)
-
-** stdlib
-- backport Int32.ml and Int64.ml (depends on custom block) (3.00)
-
-** compilers
-- finish native arm port (from 2.01?)
-- port more arch x86_64(amd64)/arm64(aarch64)/riscv(and riscv64)/mips
-  
-** test infra
-
-
-* 0.3 (Q4 2025) ( ?arm native? )
+* 0.3 (Q4 2025) (type-directed field access disambiguation)
 
 ** language
 - backport (partial) shorthand notation for records { lbl; } in exprs and
