--- a/todo.org
+++ b/todo.org
@@ -1,5 +1,20 @@
 * Big plan
 
+** TODO changes.txt
+
+*** runtime
+- backport "custom" block, useful for Bignum and Int32/Int64 (3.00)
+
+*** stdlib
+- backport Int32.ml and Int64.ml (depends on custom block) (3.00)
+
+*** compilers
+- finish native arm port (from 2.01?)
+- port more arch x86_64(amd64)/arm64(aarch64)/riscv(and riscv64)/mips
+  
+*** test infra
+
+
 ** Overview
 
 # finish backport arm (fix current segfault a.out), compile efuns on plan9!
