--- a/pad.org
+++ b/pad.org
@@ -2,7 +2,7 @@
 
 * History
 
-** first try: caml special light 1.16, May 1996? 19 years ago ...
+** first try: caml special light 1.16, May 1996? 19 years ago
 
 I originally started my fork from caml special light 1.16 just before
 the object extensions were added
